--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "vite",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "deploy": "git commit -am new && surge ./ && npm publish"
+    "deploy": "git add . --all && git commit -m new && surge ./ && npm publish"
   },
   "keywords": ["bible", "guess", "book", "game"],
   "author": "Biensure",
